-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.7.0
-
None
-
3
-
16754
This issue was created by maloo for Andreas Dilger <andreas.dilger@intel.com>
This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/83119ac0-7f6e-11e4-b486-5254006e85c2.
The sub-test test_6 failed with the following error:
(4) Expected 'inconsistent' on mds1, but got 'inconsistent,auto'
I expect that this is some kind of problem introduced by the landing of change http://review.whamcloud.com/12738 "LU-1453 scrub: auto trigger OI scrub more flexible" since the problem appeared for the first time for master on 2014-12-03, the same day that patch landed. There were a couple of related failures on an earlier version of that patch on 2014-11-17 before it landed.
Info required for matching: sanity-scrub 6
- is related to
-
LU-1453
LFSCK 4: Improve OI scrub trigger strategy: do not trigger urgent OI scrub on the whole system if only few inconsistent OI entries are found
-
- Resolved
-